--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.1.3",
     "bootswatch": "^4.1.3",
     "core-js": "^2.5.4",
+    "eslint": "^5.6.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^3.0.1",
     "ngx-gallery": "^5.7.0",
