--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -14,5 +14,12 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "CloudinarySettings": {
+    "CloudName": "koskos",
+    "ApiKey": ": 681245872327327",
+    "ApiSecret": "SdbCtW-I6hUb-ySaar1j9ZF-Djs"
+
+  }
 }
