--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -6,7 +6,7 @@
   
   "ConnectionStrings":
   {
-    "DefaultConnection": "Server=localhost; Database=datingApp; Uid=root; Pwd=P@ssw0rd"
+    "DefaultConnection": "Data Source=DatingApp.db"
   },
   "Logging": {
     "LogLevel": {
