--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.1.3",
     "bootswatch": "^4.1.3",
     "core-js": "^2.5.4",
+    "cryptiles": "^4.1.3",
     "eslint": "^5.9.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
